--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p class="image-caption">A young Subbulakshmi (right) and Bharatanatyam dancer T Balasaraswati posing with cigarettes in a photo studio in 1937. (Photo: Courtesy Balasaraswati, Her Art and Life)</p>
         </div>
 
-        <p>Born into a community of devadasis (women who danced and sang with devotion in temples), Subbulakshmi was surrounded by music, from her <a href="https://books.google.co.in/books?id=poiGCwAAQBAJ&pg=PT519&lpg=PT519&dq=Subbulakshmi+grandmother+was+a+violinist&source=bl&ots=0qhMTBeI8H&sig=SmY86sZxgcACrspWrzwGUZiTKqM&hl=en&sa=X&ved=0ahUKEwjt_qLf9ZHPAhUIBcAKHeGjAsgQ6AEINTAE#v=onepage&q=Subbulakshmi%20grandmother%20was%20a%20violinist&f=false">violinist grandmother</a> to her veena playing mother, Shanmukhavadivu Ammal. It was from her that Subbulakshmi inherited her famous initials. She never knew her father.  </p>
+        <p>Born into a community of devadasis (women who danced and sang with devotion in temples), Subbulakshmi was surrounded by music, from her <a href="https://books.google.co.in/books?id=poiGCwAAQBAJ&pg=PT519&lpg=PT519&dq=Subbulakshmi+grandmother+was+a+violinist&source=bl&ots=0qhMTBeI8H&sig=SmY86sZxgcACrspWrzwGUZiTKqM&hl=en&sa=X&ved=0ahUKEwjt_qLf9ZHPAhUIBcAKHeGjAsgQ6AEINTAE#v=onepage&q=Subbulakshmi%20grandmother%20was%20a%20violinist&f=false">violinist grandmother</a> to her veena playing mother, Shanmukhavadivu Ammal. It was from her that Subbulakshmi inherited her famous initials.</p>
 
         <p>Her first public performance was at the age of 11 in Tiruchirappalli, a two-hour drive from Madurai. Within a decade, she had moved to Chennai, then Madras, the heart of the Carnatic world, where she met her future husband, Kalki Sadasivam.</p>
 
@@ -166,11 +166,15 @@
 
         <p>But it was her touching sincerity that continues to resonate. Rithvik Raja, a young Carnatic musician says Subbulakshmi represented a quality all artists seek: an absolute, honest connection with their art.</p>
 
-        <p>&ldquo;You might as well call that ability &lsquo;MS&rsquo;,&rdquo; says  Krishna.</p>
+        <p>&ldquo;You might as well call that ability &lsquo;MS&rsquo;,&rdquo; says Krishna.</p>
 
-        <p>&ldquo;She is like the air when it comes to Carnatic music,&rdquo; he adds . &ldquo;You were moved by her music 50 years ago. You will be moved by it today. And you will be moved by it 50 years later.&rdquo;</p>
+        <p>&ldquo;She is like the air when it comes to Carnatic music,&rdquo; he adds. &ldquo;You were moved by her music 50 years ago. You will be moved by it today. And you will be moved by it 50 years later.&rdquo;</p>
 
         <p>Subbulakshmi died on December 11, 2004. She was 88. </p>
+
+        <hr />
+
+        <p class="correction">CORRECTION: An earlier version of this article said that MS Subbulakshmi never knew her father. Her family has since clarified that she met her father, Subramania Iyer, when she was a child. We regret the error.</p>
 
         <hr />
 
